fix socket-middleware, fix z-index 4 modal

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -7,6 +7,7 @@
     right: 0;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 .component {
